# ton-analyst

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup
.claude-plugin/: marketplace.json
skills/ton-analyst/: SKILL.md  pyproject.toml  requirements.txt  setup
skills/ton-analyst/reference/: cex-flows.md  cli.md  dune-api.md  flow-tracing.md  index.md  labels.md  local-learnings.md  patterns.md  report-format.md  tables.md  ton-blockchain.md  update-flow.md
skills/ton-analyst/reference/dune/: api.md  assets.md  dashboards.md  mat-views.md  query-patterns.md
skills/ton-analyst/reference/dune/examples/: README.md  fragment-outflows.sql  fragment-username-sales.sql  multi-hop-attribution.sql  nft-names.sql  real-wallets-ton.sql  real-wallets-usdt.sql  supply-breakdown.sql  trading-bot-fee-adoption.sql  trading-bot-query-id-dex-volume.sql
skills/ton-analyst/reference/examples/: README.md  filter-interfaces.sql  fragment-inflows.sql  fragment-outflows.sql  fragment-username-sales.sql  multi-hop-attribution.sql  net-value-flow.sql  real-wallets-ton.sql  supply-breakdown.sql  trace-fees.sql
skills/ton-analyst/reference/techniques/: cex-flows.md  dex-wash-detection.md  fee-comparison.md  flow-tracing.md  mau-measurement.md  priority-mining.md  staking-analysis.md  trading-bot-adoption.md  vesting-analysis.md
skills/ton-analyst/reference/ton/: address-investigation.md  api.md  blockchain.md  fragment.md  key-addresses.md  label-submission.md  labels.md  supply-tokenomics.md  wallet-investigation.md
skills/ton-analyst/tests/: conftest.py  test_http.py  test_unit.py
(+22 files in other folders)
