[project]
name = "ton-analyst-cli"
version = "0.1.0"
description = "Context-efficient TONAPI CLI shipped with the ton-analyst skill."
readme = "../../README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pytoniq-core>=0.1.41,<0.2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.uv]
package = false  # this dir is a CLI script, not an importable package

[tool.pytest.ini_options]
testpaths = ["tests"]
